// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedSystemsTable should render correctly 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <Connect(SystemsTable)
        permissions={
          Object {
            "inventoryRead": true,
          }
        }
      >
        <SystemsTable
          driftClearFilters={[Function]}
          permissions={
            Object {
              "inventoryRead": true,
            }
          }
          selectEntities={[Function]}
          selectHistoricProfiles={[Function]}
          selectSingleHSP={[Function]}
          selectedSystemIds={Array []}
          setSelectedSystemIds={[Function]}
        >
          <div
            className="inventory-toolbar-no-padding"
          >
            <ForwardRef
              bulkSelect={
                Object {
                  "checked": null,
                  "count": undefined,
                  "id": "systems-bulk-select",
                  "isDisabled": true,
                  "items": Array [
                    Object {
                      "onClick": [Function],
                      "title": "Select none (0)",
                    },
                    Object {
                      "onClick": [Function],
                      "title": "Select page (0)",
                    },
                    Object {
                      "onClick": [Function],
                      "title": "Deselect page (0)",
                    },
                  ],
                  "onSelect": [Function],
                }
              }
              component="section"
              customFilters={
                Object {
                  "filter": Object {
                    "system_profile": Object {},
                  },
                  "tags": undefined,
                }
              }
              fallback={
                <Bullseye
                  className="pf-u-p-lg"
                >
                  <Spinner
                    size="xl"
                  />
                </Bullseye>
              }
              getEntities={[Function]}
              noDetail={true}
              onLoad={[Function]}
              showTags={true}
              tableProps={
                Object {
                  "canSelectAll": false,
                  "className": "inventory-align",
                  "isStickyHeader": true,
                  "ouiaId": "systems-table",
                  "selectVariant": undefined,
                }
              }
            >
              <BaseInvTable
                bulkSelect={
                  Object {
                    "checked": null,
                    "count": undefined,
                    "id": "systems-bulk-select",
                    "isDisabled": true,
                    "items": Array [
                      Object {
                        "onClick": [Function],
                        "title": "Select none (0)",
                      },
                      Object {
                        "onClick": [Function],
                        "title": "Select page (0)",
                      },
                      Object {
                        "onClick": [Function],
                        "title": "Deselect page (0)",
                      },
                    ],
                    "onSelect": [Function],
                  }
                }
                component="section"
                customFilters={
                  Object {
                    "filter": Object {
                      "system_profile": Object {},
                    },
                    "tags": undefined,
                  }
                }
                fallback={
                  <Bullseye
                    className="pf-u-p-lg"
                  >
                    <Spinner
                      size="xl"
                    />
                  </Bullseye>
                }
                getEntities={[Function]}
                innerRef={null}
                noDetail={true}
                onLoad={[Function]}
                showTags={true}
                tableProps={
                  Object {
                    "canSelectAll": false,
                    "className": "inventory-align",
                    "isStickyHeader": true,
                    "ouiaId": "systems-table",
                    "selectVariant": undefined,
                  }
                }
              >
                <section
                  className="inventory"
                >
                  <Suspense
                    fallback={
                      <Bullseye
                        className="pf-u-p-lg"
                      >
                        <Spinner
                          size="xl"
                        />
                      </Bullseye>
                    }
                  >
                    <ForwardRef
                      ErrorComponent={
                        <InventoryLoadError
                          bulkSelect={
                            Object {
                              "checked": null,
                              "count": undefined,
                              "id": "systems-bulk-select",
                              "isDisabled": true,
                              "items": Array [
                                Object {
                                  "onClick": [Function],
                                  "title": "Select none (0)",
                                },
                                Object {
                                  "onClick": [Function],
                                  "title": "Select page (0)",
                                },
                                Object {
                                  "onClick": [Function],
                                  "title": "Deselect page (0)",
                                },
                              ],
                              "onSelect": [Function],
                            }
                          }
                          component="section"
                          customFilters={
                            Object {
                              "filter": Object {
                                "system_profile": Object {},
                              },
                              "tags": undefined,
                            }
                          }
                          fallback={
                            <Bullseye
                              className="pf-u-p-lg"
                            >
                              <Spinner
                                size="xl"
                              />
                            </Bullseye>
                          }
                          getEntities={[Function]}
                          history={
                            Object {
                              "action": "POP",
                              "block": [Function],
                              "canGo": [Function],
                              "createHref": [Function],
                              "entries": Array [
                                Object {
                                  "hash": "",
                                  "pathname": "/",
                                  "search": "",
                                  "state": undefined,
                                },
                              ],
                              "go": [Function],
                              "goBack": [Function],
                              "goForward": [Function],
                              "index": 0,
                              "length": 1,
                              "listen": [Function],
                              "location": Object {
                                "hash": "",
                                "pathname": "/",
                                "search": "",
                                "state": undefined,
                              },
                              "push": [Function],
                              "replace": [Function],
                            }
                          }
                          innerRef={null}
                          noDetail={true}
                          onLoad={[Function]}
                          showTags={true}
                          store={
                            Object {
                              "clearActions": [Function],
                              "dispatch": [Function],
                              "getActions": [Function],
                              "getState": [Function],
                              "replaceReducer": [Function],
                              "subscribe": [Function],
                            }
                          }
                          tableProps={
                            Object {
                              "canSelectAll": false,
                              "className": "inventory-align",
                              "isStickyHeader": true,
                              "ouiaId": "systems-table",
                              "selectVariant": undefined,
                            }
                          }
                        />
                      }
                      appName="inventory"
                      bulkSelect={
                        Object {
                          "checked": null,
                          "count": undefined,
                          "id": "systems-bulk-select",
                          "isDisabled": true,
                          "items": Array [
                            Object {
                              "onClick": [Function],
                              "title": "Select none (0)",
                            },
                            Object {
                              "onClick": [Function],
                              "title": "Select page (0)",
                            },
                            Object {
                              "onClick": [Function],
                              "title": "Deselect page (0)",
                            },
                          ],
                          "onSelect": [Function],
                        }
                      }
                      component="section"
                      customFilters={
                        Object {
                          "filter": Object {
                            "system_profile": Object {},
                          },
                          "tags": undefined,
                        }
                      }
                      fallback={
                        <Bullseye
                          className="pf-u-p-lg"
                        >
                          <Spinner
                            size="xl"
                          />
                        </Bullseye>
                      }
                      getEntities={[Function]}
                      history={
                        Object {
                          "action": "POP",
                          "block": [Function],
                          "canGo": [Function],
                          "createHref": [Function],
                          "entries": Array [
                            Object {
                              "hash": "",
                              "pathname": "/",
                              "search": "",
                              "state": undefined,
                            },
                          ],
                          "go": [Function],
                          "goBack": [Function],
                          "goForward": [Function],
                          "index": 0,
                          "length": 1,
                          "listen": [Function],
                          "location": Object {
                            "hash": "",
                            "pathname": "/",
                            "search": "",
                            "state": undefined,
                          },
                          "push": [Function],
                          "replace": [Function],
                        }
                      }
                      innerRef={null}
                      module="./InventoryTable"
                      noDetail={true}
                      onLoad={[Function]}
                      scope="inventory"
                      showTags={true}
                      store={
                        Object {
                          "clearActions": [Function],
                          "dispatch": [Function],
                          "getActions": [Function],
                          "getState": [Function],
                          "replaceReducer": [Function],
                          "subscribe": [Function],
                        }
                      }
                      tableProps={
                        Object {
                          "canSelectAll": false,
                          "className": "inventory-align",
                          "isStickyHeader": true,
                          "ouiaId": "systems-table",
                          "selectVariant": undefined,
                        }
                      }
                    >
                      <BaseScalprumComponent
                        ErrorComponent={
                          <InventoryLoadError
                            bulkSelect={
                              Object {
                                "checked": null,
                                "count": undefined,
                                "id": "systems-bulk-select",
                                "isDisabled": true,
                                "items": Array [
                                  Object {
                                    "onClick": [Function],
                                    "title": "Select none (0)",
                                  },
                                  Object {
                                    "onClick": [Function],
                                    "title": "Select page (0)",
                                  },
                                  Object {
                                    "onClick": [Function],
                                    "title": "Deselect page (0)",
                                  },
                                ],
                                "onSelect": [Function],
                              }
                            }
                            component="section"
                            customFilters={
                              Object {
                                "filter": Object {
                                  "system_profile": Object {},
                                },
                                "tags": undefined,
                              }
                            }
                            fallback={
                              <Bullseye
                                className="pf-u-p-lg"
                              >
                                <Spinner
                                  size="xl"
                                />
                              </Bullseye>
                            }
                            getEntities={[Function]}
                            history={
                              Object {
                                "action": "POP",
                                "block": [Function],
                                "canGo": [Function],
                                "createHref": [Function],
                                "entries": Array [
                                  Object {
                                    "hash": "",
                                    "pathname": "/",
                                    "search": "",
                                    "state": undefined,
                                  },
                                ],
                                "go": [Function],
                                "goBack": [Function],
                                "goForward": [Function],
                                "index": 0,
                                "length": 1,
                                "listen": [Function],
                                "location": Object {
                                  "hash": "",
                                  "pathname": "/",
                                  "search": "",
                                  "state": undefined,
                                },
                                "push": [Function],
                                "replace": [Function],
                              }
                            }
                            innerRef={null}
                            noDetail={true}
                            onLoad={[Function]}
                            showTags={true}
                            store={
                              Object {
                                "clearActions": [Function],
                                "dispatch": [Function],
                                "getActions": [Function],
                                "getState": [Function],
                                "replaceReducer": [Function],
                                "subscribe": [Function],
                              }
                            }
                            tableProps={
                              Object {
                                "canSelectAll": false,
                                "className": "inventory-align",
                                "isStickyHeader": true,
                                "ouiaId": "systems-table",
                                "selectVariant": undefined,
                              }
                            }
                          />
                        }
                        appName="inventory"
                        bulkSelect={
                          Object {
                            "checked": null,
                            "count": undefined,
                            "id": "systems-bulk-select",
                            "isDisabled": true,
                            "items": Array [
                              Object {
                                "onClick": [Function],
                                "title": "Select none (0)",
                              },
                              Object {
                                "onClick": [Function],
                                "title": "Select page (0)",
                              },
                              Object {
                                "onClick": [Function],
                                "title": "Deselect page (0)",
                              },
                            ],
                            "onSelect": [Function],
                          }
                        }
                        component="section"
                        customFilters={
                          Object {
                            "filter": Object {
                              "system_profile": Object {},
                            },
                            "tags": undefined,
                          }
                        }
                        fallback={
                          <Bullseye
                            className="pf-u-p-lg"
                          >
                            <Spinner
                              size="xl"
                            />
                          </Bullseye>
                        }
                        getEntities={[Function]}
                        history={
                          Object {
                            "action": "POP",
                            "block": [Function],
                            "canGo": [Function],
                            "createHref": [Function],
                            "entries": Array [
                              Object {
                                "hash": "",
                                "pathname": "/",
                                "search": "",
                                "state": undefined,
                              },
                            ],
                            "go": [Function],
                            "goBack": [Function],
                            "goForward": [Function],
                            "index": 0,
                            "length": 1,
                            "listen": [Function],
                            "location": Object {
                              "hash": "",
                              "pathname": "/",
                              "search": "",
                              "state": undefined,
                            },
                            "push": [Function],
                            "replace": [Function],
                          }
                        }
                        innerRef={null}
                        module="./InventoryTable"
                        noDetail={true}
                        onLoad={[Function]}
                        scope="inventory"
                        showTags={true}
                        store={
                          Object {
                            "clearActions": [Function],
                            "dispatch": [Function],
                            "getActions": [Function],
                            "getState": [Function],
                            "replaceReducer": [Function],
                            "subscribe": [Function],
                          }
                        }
                        tableProps={
                          Object {
                            "canSelectAll": false,
                            "className": "inventory-align",
                            "isStickyHeader": true,
                            "ouiaId": "systems-table",
                            "selectVariant": undefined,
                          }
                        }
                      >
                        <LoadModule
                          ErrorComponent={[Function]}
                          appName="inventory"
                          bulkSelect={
                            Object {
                              "checked": null,
                              "count": undefined,
                              "id": "systems-bulk-select",
                              "isDisabled": true,
                              "items": Array [
                                Object {
                                  "onClick": [Function],
                                  "title": "Select none (0)",
                                },
                                Object {
                                  "onClick": [Function],
                                  "title": "Select page (0)",
                                },
                                Object {
                                  "onClick": [Function],
                                  "title": "Deselect page (0)",
                                },
                              ],
                              "onSelect": [Function],
                            }
                          }
                          component="section"
                          customFilters={
                            Object {
                              "filter": Object {
                                "system_profile": Object {},
                              },
                              "tags": undefined,
                            }
                          }
                          fallback={
                            <Bullseye
                              className="pf-u-p-lg"
                            >
                              <Spinner
                                size="xl"
                              />
                            </Bullseye>
                          }
                          getEntities={[Function]}
                          history={
                            Object {
                              "action": "POP",
                              "block": [Function],
                              "canGo": [Function],
                              "createHref": [Function],
                              "entries": Array [
                                Object {
                                  "hash": "",
                                  "pathname": "/",
                                  "search": "",
                                  "state": undefined,
                                },
                              ],
                              "go": [Function],
                              "goBack": [Function],
                              "goForward": [Function],
                              "index": 0,
                              "length": 1,
                              "listen": [Function],
                              "location": Object {
                                "hash": "",
                                "pathname": "/",
                                "search": "",
                                "state": undefined,
                              },
                              "push": [Function],
                              "replace": [Function],
                            }
                          }
                          innerRef={null}
                          module="./InventoryTable"
                          noDetail={true}
                          onLoad={[Function]}
                          scope="inventory"
                          showTags={true}
                          store={
                            Object {
                              "clearActions": [Function],
                              "dispatch": [Function],
                              "getActions": [Function],
                              "getState": [Function],
                              "replaceReducer": [Function],
                              "subscribe": [Function],
                            }
                          }
                          tableProps={
                            Object {
                              "canSelectAll": false,
                              "className": "inventory-align",
                              "isStickyHeader": true,
                              "ouiaId": "systems-table",
                              "selectVariant": undefined,
                            }
                          }
                        >
                          <Suspense
                            fallback={
                              <Bullseye
                                className="pf-u-p-lg"
                              >
                                <Spinner
                                  size="xl"
                                />
                              </Bullseye>
                            }
                          >
                            <_default
                              bulkSelect={
                                Object {
                                  "checked": null,
                                  "count": undefined,
                                  "id": "systems-bulk-select",
                                  "isDisabled": true,
                                  "items": Array [
                                    Object {
                                      "onClick": [Function],
                                      "title": "Select none (0)",
                                    },
                                    Object {
                                      "onClick": [Function],
                                      "title": "Select page (0)",
                                    },
                                    Object {
                                      "onClick": [Function],
                                      "title": "Deselect page (0)",
                                    },
                                  ],
                                  "onSelect": [Function],
                                }
                              }
                              component="section"
                              customFilters={
                                Object {
                                  "filter": Object {
                                    "system_profile": Object {},
                                  },
                                  "tags": undefined,
                                }
                              }
                              getEntities={[Function]}
                              history={
                                Object {
                                  "action": "POP",
                                  "block": [Function],
                                  "canGo": [Function],
                                  "createHref": [Function],
                                  "entries": Array [
                                    Object {
                                      "hash": "",
                                      "pathname": "/",
                                      "search": "",
                                      "state": undefined,
                                    },
                                  ],
                                  "go": [Function],
                                  "goBack": [Function],
                                  "goForward": [Function],
                                  "index": 0,
                                  "length": 1,
                                  "listen": [Function],
                                  "location": Object {
                                    "hash": "",
                                    "pathname": "/",
                                    "search": "",
                                    "state": undefined,
                                  },
                                  "push": [Function],
                                  "replace": [Function],
                                }
                              }
                              noDetail={true}
                              onLoad={[Function]}
                              showTags={true}
                              store={
                                Object {
                                  "clearActions": [Function],
                                  "dispatch": [Function],
                                  "getActions": [Function],
                                  "getState": [Function],
                                  "replaceReducer": [Function],
                                  "subscribe": [Function],
                                }
                              }
                              tableProps={
                                Object {
                                  "canSelectAll": false,
                                  "className": "inventory-align",
                                  "isStickyHeader": true,
                                  "ouiaId": "systems-table",
                                  "selectVariant": undefined,
                                }
                              }
                            >
                              <div>
                                <h1>
                                  Inventory mock
                                </h1>
                              </div>
                            </_default>
                          </Suspense>
                        </LoadModule>
                      </BaseScalprumComponent>
                    </ForwardRef>
                  </Suspense>
                </section>
              </BaseInvTable>
            </ForwardRef>
          </div>
        </SystemsTable>
      </Connect(SystemsTable)>
    </Provider>
  </Router>
</MemoryRouter>
`;

exports[`ConnectedSystemsTable should render correctly with no inventory read permissions 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <Connect(SystemsTable)
        permissions={
          Object {
            "inventoryRead": false,
          }
        }
      >
        <SystemsTable
          driftClearFilters={[Function]}
          permissions={
            Object {
              "inventoryRead": false,
            }
          }
          selectEntities={[Function]}
          selectHistoricProfiles={[Function]}
          selectSingleHSP={[Function]}
          selectedSystemIds={Array []}
          setSelectedSystemIds={[Function]}
        >
          <EmptyStateDisplay
            color="#6a6e73"
            icon={[Function]}
            text={
              Array [
                "Contact your organization administrator(s) for more information.",
              ]
            }
            title="You do not have access to the inventory"
          >
            <EmptyState
              variant="large"
            >
              <div
                className="pf-c-empty-state pf-m-lg"
              >
                <div
                  className="pf-c-empty-state__content"
                >
                  <EmptyStateIcon
                    className={null}
                    color="#6a6e73"
                    icon={[Function]}
                  >
                    <LockIcon
                      aria-hidden="true"
                      className="pf-c-empty-state__icon"
                      color="#6a6e73"
                      noVerticalAlign={false}
                      size="sm"
                    >
                      <svg
                        aria-hidden="true"
                        aria-labelledby={null}
                        className="pf-c-empty-state__icon"
                        fill="#6a6e73"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 448 512"
                        width="1em"
                      >
                        <path
                          d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
                        />
                      </svg>
                    </LockIcon>
                  </EmptyStateIcon>
                  <br />
                  <Title
                    headingLevel="h1"
                    size="lg"
                  >
                    <h1
                      className="pf-c-title pf-m-lg"
                      data-ouia-component-id="OUIA-Generated-Title-1"
                      data-ouia-component-type="PF4/Title"
                      data-ouia-safe={true}
                    >
                      You do not have access to the inventory
                    </h1>
                  </Title>
                  <EmptyStateBody>
                    <div
                      className="pf-c-empty-state__body"
                    >
                      Contact your organization administrator(s) for more information.
                      <br />
                    </div>
                  </EmptyStateBody>
                </div>
              </div>
            </EmptyState>
          </EmptyStateDisplay>
        </SystemsTable>
      </Connect(SystemsTable)>
    </Provider>
  </Router>
</MemoryRouter>
`;

exports[`ConnectedSystemsTable should render radio correctly 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <Connect(SystemsTable)
        hasInventoryReadPermissions={true}
      >
        <SystemsTable
          driftClearFilters={[Function]}
          hasInventoryReadPermissions={true}
          selectEntities={[Function]}
          selectHistoricProfiles={[Function]}
          selectedSystemIds={Array []}
          setSelectedSystemIds={[Function]}
          updateColumns={[Function]}
        >
          <Spinner
            size="lg"
          >
            <span
              aria-valuetext="Loading..."
              className="pf-c-spinner pf-m-lg"
              role="progressbar"
            >
              <span
                className="pf-c-spinner__clipper"
              />
              <span
                className="pf-c-spinner__lead-ball"
              />
              <span
                className="pf-c-spinner__tail-ball"
              />
            </span>
          </Spinner>
        </SystemsTable>
      </Connect(SystemsTable)>
    </Provider>
  </Router>
</MemoryRouter>
`;
